@@ -1,6 +1,7 @@
 package com.fiap.tc.restaurantes.application.mesa;
 
 import com.fiap.tc.restaurantes.domain.entity.Mesa;
+import com.fiap.tc.restaurantes.domain.entity.Restaurante;
 import com.fiap.tc.restaurantes.domain.mapper.mesa.MesaMapper;
 import com.fiap.tc.restaurantes.domain.output.mesa.MesaResponse;
 import com.fiap.tc.restaurantes.domain.useCase.mesa.ListarMesasUseCase;
@@ -11,7 +12,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @RestController
@@ -20,14 +20,12 @@ public class ListarMesasController {
 
     private final MesaMapper mesaMapper;
     private final ListarMesasUseCase listarMesasUseCase;
+    private final Restaurante restaurante;
 
     @GetMapping
     public ResponseEntity<List<MesaResponse>> listarMesas() {
-        List<Mesa> mesas = listarMesasUseCase.listarMesas();
-        List<MesaResponse> listaMesaResponse = mesas.stream()
-                .map(mesaMapper::toMesaResponse)
-                .collect(Collectors.toList());
+        List<MesaResponse> listarMesas = listarMesasUseCase.listarMesasPorRestaurante(restaurante.getRestauranteId()).stream().map(mesaMapper::toMesaResponse).toList();
 
-        return ResponseEntity.ok(listaMesaResponse);
+        return ResponseEntity.ok(listarMesas);
     }
 }
